@startuml StationMeteo

class StationMeteo {
    - ServeurMQTT serveurMQTT;
    - byte addrLcd = 0x27;
    - byte addr = 0x76;
    - byte pinBouton = 26;
    - Bme280 bme;
    - AffichageLCD lcd;
    - Bouton bouton;
    - byte allumerLCD;
    - byte m_modeHorsLigne;
    
    - void GestionMenuDemarrage();
    + StationMeteo();
    + void Setup();
    + void Executer();
}

class Bme280 {
    - Adafruit_BME280 m_bme;
    - byte m_adresse_bme;
    + float m_temperature;
    + float m_humidite;
    + float m_pression;

    + Bme280(byte p_adresse_bme);
    + void EtatInitial();
    + void LireInformationBme280();
}

class AffichageLCD {
    - LiquidCrystal_I2C m_lcd;
    - byte m_adresseLCD;
    - unsigned long m_tempsPrecedent;
    - char m_changerDonnees;

    + AffichageLCD(byte p_adresse);
    + void Initialiser();
    + void Allumer();
    + void Eteindre();
    + void AfficherMessageVeille(byte p_estEnVeille);
    + void AfficherMessageMQTT();
    + void AfficherMessageWifiManager();
    + void AfficherMessageReset();
    + void AfficherInfos(float p_temp, float p_humidite, float p_pression);
}

class Bouton {
    - const byte m_pinbouton;
    - byte m_etatPrecedent;
    - byte m_etatCourant;

    + Bouton(byte p_pinBouton);
    + byte EstRelacher();
    + byte EstAppuyer();
}

class ServeurMQTT {
    - WiFiManager m_wifiManager;
    - char mqtt_serveur[40];
    - char mqtt_port[5];
    - char mqtt_utilisateur[30];
    - char mqtt_motDePasse[100];
    - const char* m_fichier = "/config.json";
    - File m_fichierConfiguration;
    - DynamicJsonDocument m_doc;;
    - const char* m_serveur_mqtt = "192.168.2.88";
    - const char* m_port_mqtt = "1883";
    - const char* m_utilisateur = "admin";
    - const char* m_motDePasseUtilisateur = "adminadmin";
    - unsigned long m_tempsDernierMessage;
    - WiFiClient m_espClient;
    - PubSubClient m_client;

    - void Reconnecter(AffichageLCD p_lcd);
    - void Publier(Bme280 p_bme);
    + ServeurMQTT();
    + void Configuration();
    + void ConnectionAuAccessPoint();
    + void Loop(Bme280 p_bme, AffichageLCD p_lcd);
    + void EnregistrerParametresWifiManager();
    + void LectureParametreWifiManager();
}

ServeurMQTT --> Bme280
StationMeteo --> ServeurMQTT
StationMeteo --> AffichageLCD
Bme280 <-- StationMeteo
StationMeteo --> Bouton
@enduml